<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/ic_mec_background_second"
    tools:context=".fragment.passwordReset.PasswordResetFragment">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="30dp"
        android:background="@color/white"
        app:cardCornerRadius="15dp"
        app:layout_constraintVertical_bias="0.4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardview_claoyut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="34dp"
            android:background="@color/white">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_login_bigTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/txt_passwordResetFragment_title"
                android:textColor="@color/interface_pink"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />



            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_login_FieldName"
                style="@style/TextInputLayout.Primary3.15.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="18dp"
                android:hint="@string/txt_passwordResetFragment_oldPassword"
                android:theme="@style/TextAppearance.App.Cursor"
                app:layout_constraintTop_toBottomOf="@id/txt_login_bigTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_passwordReset_oldPassword"
                    style="@style/TextAppearance.App.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_login_surname"
                style="@style/TextInputLayout.Primary3.15.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="18dp"
                android:layout_marginBottom="34dp"
                android:hint="@string/txt_passwordResetFragment_newPassword"
                app:helperText="@string/btn_passwordResetFragment_passwordHelper"
                app:counterMaxLength="8"
                app:counterEnabled="true"
                android:theme="@style/TextAppearance.App.Cursor"
                app:layout_constraintBottom_toTopOf="@id/txtInput_resetPasswordFragment_resetPasswordTry"
                app:layout_constraintTop_toBottomOf="@id/txt_login_FieldName">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_passwordReset_newPassword"
                    style="@style/TextAppearance.App.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txtInput_resetPasswordFragment_resetPasswordTry"
                style="@style/TextInputLayout.Primary3.15.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="18dp"
                android:hint="@string/txt_passwordResetFragment_newSecondPassword"
                android:theme="@style/TextAppearance.App.Cursor"
                app:layout_constraintTop_toBottomOf="@id/txt_login_surname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_passwordReset_passwordConfirm"
                    style="@style/TextAppearance.App.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>




    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_passwordReset_reset"
        style="@style/TextView.Style12"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:text="@string/btn_passwordResetFragment_newSecondPassword"
        android:layout_marginTop="20dp"
        android:textAllCaps="false"
        app:cornerRadius="12dp"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/card_view" />




</androidx.constraintlayout.widget.ConstraintLayout>