<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginHorizontal="15dp"
    tools:context=".fragment.sign.SignFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <com.halasteknoloji.meckurbanyonetim.fragment.sign.DrawPencil
            android:id="@+id/draw_pencil"
            android:layout_width="match_parent"
            android:layout_height="250dp" />

        <TextView
            android:id="@+id/txt_layoutDialog_clear"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txt_packageCount_clear"
            android:textColor="@color/interface_pink"
            android:fontFamily="@font/roboto_bold"
            android:layout_below="@id/draw_pencil"
            android:layout_centerHorizontal="true"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_centerHorizontal="true"
            android:layout_below="@id/txt_layoutDialog_clear">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_noButton"
                style="@style/TextView.Style5"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginEnd="5dp"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/fragmentDialogue_dontAccept"
                android:textAllCaps="false"
                app:cornerRadius="12dp" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_dialog_yesButton"
                style="@style/TextView.Style12"
                android:layout_width="wrap_content"
                android:layout_height="44dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"
                android:gravity="center"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/fragmentDialogue_accept"
                android:textAllCaps="false"
                app:cornerRadius="12dp" />
        </LinearLayout>



    </RelativeLayout>

</FrameLayout>