<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/query_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment.QueryFragment"
    android:background="@drawable/ic_mec_background_second">


    <androidx.cardview.widget.CardView
        android:id="@+id/card_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/white"
        android:layout_marginHorizontal="30dp"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cardview_claoyut"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white">


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_login_bigTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/roboto_bold"
                android:gravity="center"
                android:text="@string/fragmentQuery_title"
                android:textColor="@color/interface_pink"
                android:textSize="28sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/txt_login_FieldEmail"
                style="@style/TextInputLayout.Primary3.15.Outlined"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="18dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="18dp"
                android:hint="@string/fragmentQuery_id"
                app:counterEnabled="true"
                app:counterMaxLength="11"
                android:theme="@style/TextAppearance.App.Cursor"
                app:layout_constraintTop_toBottomOf="@id/txt_login_bigTitle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edt_login_email"
                    style="@style/TextAppearance.App.EditText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_login_enter"
                style="@style/TextView.Style12"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="68dp"
                android:layout_marginTop="15dp"
                android:gravity="center"
                android:text="@string/fragmentQuery_questioningButton"
                app:cornerRadius="12dp"
                android:layout_marginBottom="20dp"
                android:textAllCaps="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/txt_login_FieldEmail" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_purchase_showList"
                style="@style/TextView.Style12"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/fragmentPurchase_show"
                android:textAllCaps="false"
                app:cornerRadius="12dp"
                app:layout_constraintEnd_toEndOf="@+id/btn_login_enter"
                app:layout_constraintStart_toStartOf="@+id/btn_login_enter"
                app:layout_constraintTop_toBottomOf="@+id/btn_login_enter" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>



</androidx.constraintlayout.widget.ConstraintLayout>